namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: yourapplication
  labels:
    name: yourapplication
