ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yourapplication
  namespace: yourapplication
  annotations:
    kubernetes.io/ingress.global-static-ip-name: yourapplication
  labels:
    app: yourapplication
spec:
  tls:
  - hosts:
    - yourapplication.yourorganization.gg
    secretName: yourapplication-prod-tls-cert
  rules:
  - host: yourapplication.yourorganization.gg
    http:
      paths:
      - backend:
          serviceName: yourapplication-backend
          servicePort: 8000
  backend:
    serviceName: yourapplication-backend
    servicePort: 8000
